# GumbasCPP

./: .gitignore
GumbasCPP/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  GumbasCPP.sln  GumbasCPP.vcxproj  GumbasCPP.vcxproj.filters  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
GumbasCPP/src/: CMakeLists.txt  GumbasCPP.cpp  GumbasCPP.h  GumbasCPP.vcxproj  GumbasCPP.vcxproj.filters  cmake_install.cmake  main.cpp  main.vcxproj  main.vcxproj.filters
pytorch/: test_input.txt  toy_model.pt  toy_model.py  traced_toy_model.pt
pytorch_cpp_app/: CMakeCache.txt  Makefile  README.md  cmake_install.cmake  example-app.cpp  example-app.sln  example-app.vcxproj  example-app.vcxproj.filters
pytorch_cpp_app/Resources/test_values/: test_output.txt
